--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
   
         <div class="mt-8 grid lg:grid-cols-3 gap-10">
           <!-- cards go here -->
-          <div class="card hover:shadow-lg"> 
+          <div class="card hover:shadow-lg transform hover:scale-110"> 
             <img src="img/stew.jpg" alt="stew" class="h-32 sm:h-48 w-full object-cover">
             <div class="m-4">
               <span class="font-bold">5 Bean Chili Stew</span>
@@ -69,7 +69,7 @@
               <span>25 mins</span>
             </div>
           </div>
-          <div class="card hover:shadow-lg"> 
+          <div class="card hover:shadow-lg transform hover:scale-110"> 
             <img src="img/noodles.jpg" alt="noodles" class="h-32 sm:h-48 w-full object-cover">
             <div class="m-4">
               <span class="font-bold">Veg Noodles</span>
@@ -80,7 +80,7 @@
               <span>25 mins</span>
             </div>
           </div>
-          <div class="card hover:shadow-lg"> 
+          <div class="card hover:shadow-lg transform hover:scale-110"> 
             <img src="img/curry.jpg" alt="curry" class="h-32 sm:h-48 w-full object-cover">
             <div class="m-4">
               <span class="font-bold">Tofu Curry</span>
@@ -97,7 +97,7 @@
 
         <div class="mt-8 grid lg:grid-cols-3 gap-10">
           <!-- cards go here -->
-          <div class="card hover:shadow-lg"> 
+          <div class="card hover:shadow-lg transform hover:scale-110"> 
             <img src="img/stew.jpg" alt="stew" class="h-32 sm:h-48 w-full object-cover">
             <div class="m-4">
               <span class="font-bold truncate block">5 Bean Chili Stew with Feta Cheese</span>
@@ -108,7 +108,7 @@
               <span>25 mins</span>
             </div>
           </div>
-          <div class="card hover:shadow-lg"> 
+          <div class="card hover:shadow-lg transform hover:scale-110"> 
             <img src="img/noodles.jpg" alt="noodles" class="h-32 sm:h-48 w-full object-cover">
             <div class="m-4">
               <span class="font-bold">Veg Noodles</span>
@@ -119,7 +119,7 @@
               <span>25 mins</span>
             </div>
           </div>
-          <div class="card hover:shadow-lg"> 
+          <div class="card hover:shadow-lg transform hover:scale-110"> 
             <img src="img/curry.jpg" alt="curry" class="h-32 sm:h-48 w-full object-cover">
             <div class="m-4">
               <span class="font-bold">Tofu Curry</span>
